--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -9,6 +9,11 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/home/index.css" />
+		<style type="text/css">
+			.mui-active{
+				color: #00a5e01;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -20,20 +25,16 @@
 			</div>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
-		<nav class="mui-bar mui-bar-tab common-background-bar">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="../quan/tab-zone.html">
-				<span class="mui-icon iconfont icon-jiaoxiaoquan"><!--<span class="mui-badge">1</span>--></span>
+			
+		<nav class="mui-bar mui-bar-tab ">
+				<a id="defaultTab" class="mui-tab-item mui-active" href="../quan/tab-zone.html">
+				<span class="mui-icon iconfont icon-jiaoxiaoquan"></span>
 				<span class="mui-tab-label">家校圈</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../tab_knowledge.html">
 				<span class="mui-icon iconfont icon-wenda"></span>
 				<span class="mui-tab-label">问答</span>
 			</a>
-
-			<!--<a class="mui-tab-item" href="../clip/clip_sub.html">
-				<span class="mui-icon mui-icon-chatboxes"></span>
-				<span class="mui-tab-label">视频</span>
-			</a>-->
 			<a class="mui-tab-item" href="../cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-yunpan"></span>
 				<span class="mui-tab-label">云盘</span>
