调整创建笔记，人员资料界面

--- a/JiaoBaoYun-hb/html/mine/qun_data.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data.html
@@ -151,7 +151,7 @@
 				<h1 class="mui-title">人员资料</h1>
 			</header>
 			<div class="mui-content">
-				<span id="noqun" class="mui-icon mui-icon-plus addqun" style="display: none;">新增群按钮</span>
+				<span id="noqun" class="mui-icon mui-icon-plus addqun" style="display: none;">创建群</span>
 				<div id="lineblue" class="keep-line-blue" style="display: none;"></div>
 				<div id="slider" class="mui-slider" style="display: none;">
 					<div id="sliderSegmentedControl" style="background: #F2F2F2;" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
