--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -21,7 +21,7 @@
 		<div class="mui-content">
 			<div>
 				<div class="mui-input-row" style="margin: 5px;">
-					<textarea id="notes" maxlength="2000" rows="10" placeholder="请输入内容"></textarea>
+					<textarea id="notes" maxlength="2000" rows="10" placeholder="请输入内容" style="border: none;"></textarea>
 				</div>
 			</div>
 		</div>
