--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -165,7 +165,7 @@
 		<script>
 			(function($, doc) {
 				mui.init({
-					statusBarBackground: '#f7f7f7'
+					statusBarBackground: '#13b7f6';
 				});
 
 				$.plusReady(function() {
