--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -31,8 +31,8 @@
 				url: 'app_notes_sub.html',
 				id: 'app_notes_sub.html',
 				styles: {
-					top: '45px',
-					bottom: localStorage.getItem('$Statusbar')
+					top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px'
+					//bottom: localStorage.getItem('$Statusbar')
 				}
 			}]
 		});
