--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -228,6 +228,9 @@
 					var content = document.body.querySelector('.mui-content');
 					var qunlist = document.getElementById("qunlist"); //群名称显示栏
 					var controladd = document.getElementById("controladd"); //群名称显示栏添加群按钮前一个item
+					document.querySelector(".mui-content").style.marginTop = (localStorage.getItem('StatusHeightNo') * 1 + 5) + 'px';
+					document.querySelector(".keep-line-blue").style.top = (localStorage.getItem('StatusHeightNo') * 1 + 50) + 'px';
+					//document.querySelector(".keep-line-white").style.top = (localStorage.getItem('StatusHeightNo') * 1 + 55) + 'px';
 
 					if(plus.webview.getWebviewById('../quan/group-pInfo.html') == null) {
 						events.preload('../quan/group-pInfo.html', 1000);
@@ -534,7 +537,7 @@
 						div.className = 'bot';
 						div.setAttribute('data-value', qun.gid);
 						div.style.display = "inline";
-						div.innerHTML = '<div class="mui-scroll-wrapper" style="background: white;top: 135px;">\
+						div.innerHTML = '<div class="mui-scroll-wrapper" style="background: white;top: ' + (localStorage.getItem('StatusHeightNo') * 1 + 135) + 'px;">\
 										<div class="mui-scroll">\
 											<ul class="mui-table-view">\
 												<div class="mui-row" style="margin-top: 8px;">\
