--- a/JiaoBaoYun-hb/html/register/reg.html
+++ b/JiaoBaoYun-hb/html/register/reg.html
@@ -9,6 +9,7 @@
 		<link href="css/style.css" rel="stylesheet" />-->
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<style>
 			.area {
 				margin: 20px auto 0px auto;
@@ -34,7 +35,7 @@
 			.mui-btn {
 				padding: 10px;
 			}
-			
+
 		</style>
 	</head>
 
