--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -104,8 +104,8 @@
 
 			//创建子页面
 			var sub = plus.webview.create('keeprecord_callorrecord_sub.html', 'keeprecord_callorrecord_sub.html', {
-				top: '45px',
-				bottom: localStorage.getItem('$Statusbar'),
+				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px'
+				//bottom: localStorage.getItem('$Statusbar'),
 			}, {
 				data: data
 			});
