--- a/JiaoBaoYun-hb/html/register/forget_password.html
+++ b/JiaoBaoYun-hb/html/register/forget_password.html
@@ -9,6 +9,7 @@
 		<link href="css/style.css" rel="stylesheet" />-->
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<style>
 			.area {
 				margin: 20px auto 0px auto;
@@ -51,7 +52,7 @@
 				<div class="mui-input-row">
 					<label>账号</label>
 					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
-				</div>             	
+				</div>
                 -->
 				<div class="mui-input-row">
 					<label>邮箱</label>
