--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -16,17 +16,21 @@
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/events.js" type="text/javascript"></script>
 		<style type="text/css">
-			.subject-icon{
-	font-size: 50px;
-}
-.divider-color{
-	color:#383838 ;
-	background-color: #f2f3f5;
-}
-.cell-color{
-	color:#808080 ;
-	background-color: white;
-}
+		/*标题图片*/
+			.subject-icon {
+				font-size: 50px;
+			}
+			/*cell标题*/
+			.divider-color {
+				color: #383838;
+				background-color: #f2f3f5;
+			}
+			/*cell*/
+			.cell-color {
+				color: #808080;
+				background-color: white;
+			}
+			
 			.dynamic-personal-image {
 				/*个人头像圆形*/
 				border-radius: 50%;
@@ -34,7 +38,7 @@
 				height: 50px;
 			}
 		</style>
-		
+
 	</head>
 
 	<body>
@@ -48,7 +52,7 @@
 			<div class="mui-scroll">
 				<ul id="list" class="mui-table-view">
 					<li class="mui-table-view-cell mui-media">
-						<img id="headImg" style="display: none;margin-top: 5px;" class="mui-media-object mui-pull-left dynamic-personal-image" / >
+						<img id="headImg" style="display: none;margin-top: 5px;" class="mui-media-object mui-pull-left dynamic-personal-image" />
 						<!--<img id="headImg">-->
 						<span id="img" class=" iconfont subject-icon dynamic-personal-image" style="margin-left: -10px;display: none;" hidden="hidden"></span>
 						<!--</img>-->
@@ -57,15 +61,15 @@
 							<p id="publishDate" class='mui-ellipsis' style="color: #747474;"></p>
 						</div>
 						<div style="margin-top: 10px;">
-						<hr id="hr"  style="height:1px;border:none;border-top:1px solid #ededed;" />
-					</div>
+							<hr id="hr" style="height:1px;border:none;border-top:1px solid #ededed;" />
+						</div>
 						<div class="mui-media-body">
 							<font id="homeWorkContent" style="color: #747474;"></font>
 						</div>
 					</li>
 					<li id="stuHomework" class="mui-table-view-divider divider-color">学生答案</li>
-					<li id="stuCell" class="mui-table-view-cell" >
-						<div class="mui-media-body" >
+					<li id="stuCell" class="mui-table-view-cell">
+						<div class="mui-media-body">
 							<font id="stuResult" class="cell-color"></font>
 						</div>
 					</li>
